force-app/main/default/objects/LLC_BI__Site_Visit_Memo__c/LLC_BI__Site_Visit_Memo__c.object-meta.xml
<CustomObject>
    <label>Site Visit Memo</label>
    <nameField>
        <displayFormat>Site-Visit-{000}</displayFormat>
        <label>Site Visit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Visit Memos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>