force-app/main/default/objects/LLC_BI__Site_Visit_Memo__c/fields/LLC_BI__Account__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Account__c</fullName>
    <description>This field is optional and is manually populated with the Site Visit&apos;s associated Relationship.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Site Visit Memos</relationshipLabel>
    <relationshipName>Site_Visit_Memos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>