force-app/main/default/objects/LLC_BI__Site_Visit_Memo__c/fields/LLC_BI__Customer_Flow__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Customer_Flow__c</fullName>
    <description>This field is optional and is for user narrative describing customer interaction during the Site Visit. It is manually populated.</description>
    <inlineHelpText>Did you see customers in the office?  what is the feel for customer flow?</inlineHelpText>
    <label>Customer Activity</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>