force-app/main/default/objects/LLC_BI__Site_Visit_Memo__c/fields/LLC_BI__Send_When_Saved__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Send_When_Saved__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this box when you&apos;re ready to have the Site Visit Memo be e-mailed out to everyone once you save.</description>
    <inlineHelpText>Check this box when you&apos;re ready to have the Site Visit Memo be e-mailed out to everyone once you save.</inlineHelpText>
    <label>Send When Saved</label>
    <type>Checkbox</type>
</CustomField>