force-app/main/default/objects/LLC_BI__Site_Visit_Memo__c/fields/LLC_BI__Visit_Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Visit_Description__c</fullName>
    <description>This field is optional and is for user narrative describing the Site Visit. It is manually populated.</description>
    <inlineHelpText>What happened during the site visit?</inlineHelpText>
    <label>Visit Description</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>